# PyAgent

./: .gitignore  CONTRIBUTING.md  LICENSE  Plan.md  Procfile  README.md  index.html  pyproject.toml  render.yaml
docs/: delegation-brief.md  financial-agent-demo-script.md  render-deployment.md  submission-note-template.md  teammate-handoff.md
docs/plans/: 2026-03-07-paper-website.md  2026-04-13-chat-workspace-agent.md
examples/: basic_usage.py  compaction_demo.py  example.sh  make_financial_demo_video.py  multi_agent.py  multi_turn.py  object_methods.py  retry_demo.py  run_financial_research_demo.sh  run_public_financial_demo.sh  runtime_state.py  skill_code_review.py  skill_data_processor.py  skill_smart_home.py  stream.py  timeout_demo.py
examples/skills/code-review/: SKILL.md
examples/skills/data-processor/: SKILL.md  injection.py
examples/skills/smart-home/: SKILL.md  injection.py
report/: report.tex
slides/: cs5260_financial_agent_demo.pptx  financial_agent_speaker_notes.md  generate_financial_agent_deck.py  generate_pycallingagent_design_deck.py  generate_pycallingagent_technical_deck.py  generate_talk.js  outline_to_pdf.py  package-lock.json  package.json  pycallingagent_design_deployment.pptx  pycallingagent_design_speaker_notes.md  pycallingagent_technical_deck.pptx  pycallingagent_technical_speaker_notes_zh.md  pycallingagent_technical_speech_en.md  requirements.txt  speaker_outline.md
src/cave_agent/: __init__.py  agent.py  display.py  logger.py  prompts.py  types.py  utils.py
src/cave_agent/compaction/: prompts.py  state.py  tokens.py
src/cave_agent/models/: __init__.py  base.py  litellm.py  openai.py
src/cave_agent/runtime/: builtins.py  ipykernel_executor.py  ipykernel_runtime.py  ipython_runtime.py
src/cave_agent/security/: checker.py
src/cave_agent/skills/: skill.py
src/cave_agent/webapp/: __init__.py  __main__.py  agent_runner.py  app.py  models.py  (+2 more)
src/pycallingagent/: __init__.py  agent.py  display.py  logger.py  types.py
static/css/: pycallingagent.css
static/js/: caveagent.js  pycallingagent.js
tests/: conftest.py  test_basic_usage.py  test_compaction.py  test_compaction_integration.py  test_financial_data.py  test_ipykernel_integration.py  test_ipykernel_runtime.py  test_ipython_runtime.py  test_ipython_state.py  test_max_tokens_recovery.py  test_multi_turn.py  test_object_methods.py  test_security_checker.py  test_skills_core.py  test_skills_integration.py  test_streaming_text_parser.py  test_timeout.py  test_type_schema_extractor.py  test_webapp.py  test_webapp_main.py
(+56 files in other folders)
