[project]
name = "cave-agent"
version = "0.7.3"
description = "CaveAgent is a tool-augmented agent framework that enables function-calling through LLM code generation and provides runtime state management. Unlike traditional JSON-schema approaches, it natively handles complex Python objects like DataFrames and ndarrays within a persistent runtime, enabling lossless data flow across multi-turn interactions."
readme = "README.md"
authors = [
    { name = "Ram", email = "codermao@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.12.0",
    "rich>=14.3.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]
keywords = ["llm", "agent", "function-calling", "tool-calling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/acodercat/cave-agent"
Repository = "https://github.com/acodercat/cave-agent"

[project.scripts]
cave-agent-webapp = "cave_agent.webapp.__main__:main"

[project.optional-dependencies]
litellm = [
    "litellm>=1.83.4",
]

openai = [
    "openai>=2.30.0",
]

webapp = [
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.4",
    "matplotlib>=3.9.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.5",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.66",
]

all = [
    "litellm>=1.83.4",
    "openai>=2.30.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.4",
    "matplotlib>=3.9.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.5",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.66",
]
ipykernel = [
    "dill>=0.4.1",
    "ipykernel>=7.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.4.2",
    "hatch>=1.16.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "twine>=6.2.0",
    "litellm>=1.83.4",
    "openai>=2.30.0",
    "dill>=0.4.1",
    "ipykernel>=7.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.4",
    "matplotlib>=3.9.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.5",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.66",
]
